--- a/app/AccountModule/config/account.neon
+++ b/app/AccountModule/config/account.neon
@@ -3,5 +3,5 @@ services:
 	routerFactory:
 		setup:
 			- register(@routerFactoryAcc)
-	topBar:
-	    implement: ITopBarControlFactory
+	loginPanel:
+	    implement: ILoginPanelFactory
